Fix app structure for Render deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask==2.3.3
+Flask==2.3.3
+gunicorn==21.2.0
+Flask-Login==0.6.2
+Flask-SQLAlchemy==3.1.1
 flask-sqlalchemy==3.1.1
 sqlalchemy==2.0.23
 python-dotenv==1.0.0
@@ -10,5 +13,3 @@ flask-wtf==1.2.1
 wtforms==3.1.0
 weasyprint==60.1  # PDF出力用
 python-pptx==0.6.21  # PPT出力用
-gunicorn==21.2.0  # デプロイ用 
-Flask-Login==0.6.2
