--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,16 @@
-Flask==2.3.3
-gunicorn==21.2.0
+Flask==2.2.3
 Flask-Login==0.6.2
-Flask-SQLAlchemy==3.1.1
-flask-sqlalchemy==3.1.1
-sqlalchemy==2.0.23
+Flask-SQLAlchemy==3.0.3
+Flask-WTF==1.1.1
+email-validator==1.3.1
+Flask-Migrate==4.0.4
+psycopg2-binary==2.9.6
+gunicorn==20.1.0
 python-dotenv==1.0.0
 Werkzeug==2.3.7
 Jinja2==3.1.2
 itsdangerous==2.1.2
 click==8.1.7
-flask-wtf==1.2.1
 wtforms==3.1.0
 weasyprint==60.1  # PDF出力用
 python-pptx==0.6.21  # PPT出力用
