--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,50 @@
-Flask==2.2.3
-Flask-Login==0.6.2
-Flask-SQLAlchemy==3.0.3
-Flask-WTF==1.1.1
-email-validator==1.3.1
-Flask-Migrate==4.0.4
-psycopg2-binary==2.9.6
-gunicorn==20.1.0
-python-dotenv==1.0.0
-Werkzeug==2.3.7
-Jinja2==3.1.2
-itsdangerous==2.1.2
+alembic==1.15.1
+blinker==1.9.0
+Brotli==1.1.0
+cffi==1.17.1
 click==8.1.7
-wtforms==3.1.0
-weasyprint==60.1  # PDF出力用
-python-pptx==0.6.21  # PPT出力用
+contourpy==1.3.1
+cssselect2==0.8.0
+cycler==0.12.1
+dnspython==2.7.0
+email_validator==2.2.0
+Flask==2.3.3
+Flask-Login==0.6.2
+Flask-Migrate==4.1.0
+Flask-SQLAlchemy==3.1.1
+Flask-WTF==1.2.1
+fonttools==4.56.0
+gunicorn==21.2.0
+html5lib==1.1
+idna==3.10
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.8
+lxml==5.3.1
+Mako==1.3.9
+MarkupSafe==3.0.2
+matplotlib==3.10.1
+numpy==2.2.3
+packaging==24.2
+pandas==2.2.3
+pillow==11.1.0
+pycparser==2.22
+pydyf==0.11.0
+pyparsing==3.2.1
+pyphen==0.17.2
+python-dateutil==2.9.0.post0
+python-dotenv==1.0.0
+python-pptx==0.6.21
+pytz==2025.1
+six==1.17.0
+SQLAlchemy==2.0.23
+tinycss2==1.4.0
+tinyhtml5==2.0.0
+typing_extensions==4.12.2
+tzdata==2025.1
+weasyprint==60.1
+webencodings==0.5.1
+Werkzeug==2.3.7
+WTForms==3.1.0
+XlsxWriter==3.2.2
+zopfli==0.2.3.post1
