--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,13 @@
 services:
   - type: web
-    name: 経営管理システム
+    name: flask-app
     env: python
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn wsgi:app
     envVars:
-      - key: PYTHONPATH
-        value: .
+      - key: PYTHON_VERSION
+        value: 3.9.0
+      - key: SECRET_KEY
+        generateValue: true
+      - key: DATABASE_URL
+        value: sqlite:///instance/app.db
