--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Flask==2.0.1
 Flask-SQLAlchemy==2.5.1
 Flask-Login==0.5.0
 Flask-Migrate==3.1.0
+Flask-WTF==1.0.1
 Werkzeug==2.0.3
 gunicorn==20.1.0
 SQLAlchemy==1.4.36
